[tool.poetry]
name = "visual_genetic_algorithms_playground"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0"
numpy = "^1.23.2"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
