[tool.poetry]
name = "drarwing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
opencv-python = "^4.6.0"
numpy = "^1.23.2"
scipy = "^1.9.0"
scikit-learn = "^1.1.2"
dill = "^0.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
